[package]
authors = ["Felix 'Gronner' Bräunling <gronner@mailbox.org>"]
categories = ["network-programming", "web-programming::http-server"]
description = "A small single-binary HTTP server"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["webserver"]
name = "grtp"
readme = "README.md"
rust-version = "1.79.0"
version = "0.1.0"

[dependencies]

[profile.release]
opt-level = 3
lto = true
